# rheo-fp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude-notes/: README.md  environment.md  next-actions.md  sessions.md  workflow.md
data/: interpolated_rheology.npz  likhtman_mcleish2002_fig10.npz  likhtman_mcleish2002_fig11.npz  pivo2006.npz  synthetic_validation_reptation.npz  synthetic_validation_rouse_screened.npz  synthetic_validation_sticky_reptation.npz  synthetic_validation_sticky_rouse.npz  synthetic_validation_zimm.npz
docs/: elastomer_litreview.md  references.md  rheology_models.md
rheofp/fitting/: identify.py  optimize.py
rheofp/io/: data.py  export_xlsx.py
rheofp/models/: maxwell.py  pompom.py  solutions.py  tube.py
scripts/: prep_interpolate.py  validate_maxwell.py  validate_pompom.py  validate_solutions.py  validate_tube.py
tests/: test_data_io.py  test_maxwell.py  test_pompom.py  test_solutions.py  test_tube.py
