[project]
name = "rheo-fp"
version = "0.1.0"
description = "Open-source ML classifier for linear rheology (SAOS G', G'')."
readme = "README.md"
license = { file = "LICENSE" }
# Pinned to 3.12 so every machine resolves the same interpreter + wheels.
# uv manages this interpreter itself (`uv python install`), independent of any
# system Python. Do not widen this range casually — it is the reproducibility
# anchor across PCs.
requires-python = "==3.12.*"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "openpyxl",
    "tqdm",
]

[dependency-groups]
# Dev-only tools (installed by `uv sync`, excluded from a `--no-dev` install).
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rheofp"]
